# dioxus-walkthrough.nosync

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml
chapters/00-agent-tutorial/: Readme.md
chapters/01-hello-dioxus/: Cargo.toml  Dioxus.toml  README.md
chapters/01-hello-dioxus/src/: app.rs  main.rs
chapters/02-server-functions/: Cargo.toml  Dioxus.toml  README.md
chapters/02-server-functions/src/: app.rs  main.rs  server.rs
chapters/03-orders-database/: .env.example  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml
chapters/03-orders-database/src/: app.rs  main.rs  orders.rs  server.rs
chapters/04-user-accounts/: .env.example  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml
chapters/04-user-accounts/migrations/: 0002_create_users.sql
chapters/04-user-accounts/src/: app.rs  auth.rs  main.rs  orders.rs  server.rs  state.rs  users.rs
chapters/05-sessions/: .env.example  Cargo.toml  Dioxus.toml  README.md  docker-compose.yml
chapters/05-sessions/src/: app.rs  auth.rs  main.rs  orders.rs  server.rs  state.rs  users.rs
chapters/05-sessions/src/pages/: orders.rs  register.rs
chapters/06-orders-per-user/: .env.example  Cargo.toml  Dioxus.toml  README.md  build.rs  docker-compose.yml
chapters/06-orders-per-user/migrations/: 0002_add_user_id_to_orders.sql  0002_better_auth.sql  0003_add_user_id_to_orders.sql
chapters/06-orders-per-user/src/: app.rs  auth.rs  main.rs  orders.rs  server.rs
chapters/06-orders-per-user/src/pages/: login.rs  orders.rs  register.rs
chapters/07-background-jobs/: .env.example  Cargo.toml  Dioxus.toml  Dockerfile  README.md  docker-compose.yml
chapters/07-background-jobs/migrations/: 0001_create_orders.sql  0002_add_user_id_to_orders.sql  0003_add_user_id_to_orders.sql
chapters/07-background-jobs/src/: app.rs  auth.rs  jobs.rs  main.rs  orders.rs  server.rs  state.rs
chapters/07-background-jobs/src/pages/: mod.rs  orders.rs  register.rs
docs/: API-NOTES.md
docs/superpowers/plans/: 2026-07-04-dioxus-duroxide-poc.md  2026-07-04-postgres-order-store.md  2026-07-07-graphile-worker-auth-refactor.md  2026-07-11-dioxus-clerk-migration.md
docs/superpowers/specs/: 2026-07-04-dioxus-duroxide-poc-design.md  2026-07-04-postgres-order-store-design.md  2026-07-07-graphile-worker-auth-refactor-design.md  2026-07-07-tutorial-workspace-design.md  2026-07-11-better-auth-migration-design.md  2026-07-11-dioxus-clerk-migration-design.md
migrations/: 0001_create_orders.sql  0002_create_orders.sql
src/: app.rs  auth.rs  jobs.rs  main.rs  orders.rs  server.rs  state.rs  workflow.rs
src/pages/: login.rs  orders.rs  register.rs
