[package]
name = "duroxus"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Server-only (not WASM-compatible)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
duroxide = { version = "0.1", optional = true }
duroxide-pg = { version = "0.1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
dotenvy = { version = "0.15", optional = true }

# Client-only: interval sleep for the status-polling loop.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:duroxide", "dep:duroxide-pg", "dep:uuid", "dep:dotenvy"]
# Enables duroxide's in-memory SQLite provider for the workflow unit tests (no Postgres needed).
test-support = ["server", "duroxide/sqlite"]

[profile.dev]
opt-level = 1
