[package]
name = "ch05-sessions"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }

# Server-only — not compiled into the WASM bundle.
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
dotenvy = { version = "0.15", optional = true }
better-auth = { version = "0.8", features = ["axum", "sqlx-postgres"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:axum", "dep:tokio", "dep:sqlx", "dep:uuid", "dep:dotenvy", "dep:better-auth"]
