[package]
name = "ch06-orders-per-user"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }

# Server-only — not compiled into the WASM bundle.
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid"], optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
dotenvy = { version = "0.15", optional = true }
argon2 = { version = "0.5", optional = true }
tower-sessions = { version = "0.14", optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"], optional = true }
serde = { version = "1", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:sqlx",
    "dep:uuid",
    "dep:dotenvy",
    "dep:argon2",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
]
