[package]
name = "ch07-background-jobs"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Server-only (not WASM-compatible)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
# =0.13.1: last version on sqlx 0.8; 0.13.2+ moved to sqlx 0.9, which
# tower-sessions-sqlx-store (sqlx 0.8) can't share a pool with. Its
# subcrates are pinned too: newer graphile_worker_database releases dropped
# the `From<PgPool>` impl that 0.13.1 depends on.
graphile_worker = { version = "=0.13.1", optional = true }
graphile_worker_ctx = { version = "=0.5.2", optional = true }
graphile_worker_database = { version = "=0.1.3", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
dotenvy = { version = "0.15", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid"], optional = true }
# 0.14: matches the tower-sessions-core 0.14 that the sqlx store links against.
tower-sessions = { version = "0.14", optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = ["postgres"], optional = true }
argon2 = { version = "0.5", optional = true }

# Client-only: interval sleep for the status-polling loop.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[features]
default = ["web"]
web = ["dioxus/web"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:graphile_worker",
    "dep:graphile_worker_ctx",
    "dep:graphile_worker_database",
    "dep:uuid",
    "dep:dotenvy",
    "dep:sqlx",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
    "dep:argon2",
]
